--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
         Ваш браузер не підтримує відео.
       </video>
 
+      <!-- Кнопка для відкриття меню -->
+<button class="burger" id="openMenuBtn">☰</button>
+
+<!-- Повноекранне меню -->
+<div id="fullscreenMenu" style="display: none">
+  <button id="closeMenuBtn">×</button>
+  <a href="#about">ПРО НАС</a>
+  <a href="#studio">СТУДІЯ</a>
+  <a href="#distribution">ДИСТРИБУЦІЯ</a>
+  <a href="#promo">РЕКЛАМА</a>
+  <a href="#contacts">КОНТАКТИ</a>
+</div>
+
+
       <!-- Центрований логотип -->
       <div class="header-top">
         <div class="logo">
@@ -46,6 +60,7 @@
       <h2 class="pro">
        МІСЦЕ, ДЕ ЯКІСТЬ ЗВУЧАННЯ МАЄ ЗНАЧЕННЯ. ВІД ЗАПИСУ ДО МАСТЕРИНГУ <br> ВСЕ ДЛЯ ТОГО, ЩОБ ТВОЯ МУЗИКА ЗВУЧАЛА ПРОФЕСІЙНО.
       </h2>
+      <h1 class="name">Elevate Music Label</h1>
 
                   <button class="button-1" onclick="window.open('https://t.me/elevate_music_label', '_blank')">НАПИСАТИ</button>
 
@@ -303,3 +318,4 @@
     <a href="#" id="scrollToTop" title="Вгору">&#8679;</a>
   </body>
 </html>
+
